fileBrowser/06-browser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: browser-service
  namespace: browser-ns
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: browser-pod
