fileBrowser/09-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: browser-ingress
  namespace: browser-ns
spec:
  rules:
  - host: browser.home
    http:
      paths:
      - path: /
        backend:
          serviceName: browser-service
          servicePort: http
  tls:
  - hosts:
    - browser.home
    secretName: tls-secret
